translate TERM signal to bitcoind process
When stoppping docker container signal is received by PID=1 (bash) and
do not translated to bitcoind process.
bitcoind stoppping process can take about 20 seconds, so specify '-t 60'
to 'docker stop' command.

Signed-off-by: Abylay Ospan <aospan@netup.ru>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -13,4 +13,4 @@ RUN cd /opt/bitcoinfibre && ./autogen.sh\
   && make -j 4 && make install
 
 COPY ./entrypoint.sh /
-ENTRYPOINT ["/entrypoint.sh"]
+CMD ["/entrypoint.sh"]
